# kover_bot

./: Dockerfile  main.py  pyproject.toml
kover_bot/: bot2.py  rx_utils.py
v1/: bot.py
