[tool.poetry]
name = "kover-bot"
version = "0.1.0"
description = ""
authors = ["Marat <esquonk@gmail.com>"]
readme = "README.md"
packages = [{ include = "kover_bot" }]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.10.0"
python-telegram-bot = "^21.3"
aiohttp = "^3"
aioreactive = "^0.19"
reactivex = "^4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
